--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,6 +5,13 @@
  year = {1999},
  url = {http://www.lfcs.informatics.ed.ac.uk/reports/00/ECS-LFCS-00-419/},
 }
+@article{McKinna:2009,
+  author = {McKinna, James and Synek, Dan and van der Weegen, Eelis},
+  title = {Proof Pearl: Program-ming reachability algorithms in Coq},
+  year = {2009},
+  note = {Unpublished},
+  url = {http://www.cs.ru.nl/~james/RESEARCH/tfp2007.pdf},
+}
 @inproceedings{Tov:2011,
  author = {Tov, Jesse A. and Pucella, Riccardo},
  title = {Practical Affine Types},
