--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -60,7 +60,7 @@ with little extra proof effort and is inspired by previous work on a
 mechanised framework for $\pi$-calculus type systems~\cite{Gay:2001:FFP}. The
 current work focuses on the $\lambda$-calculus to provide a basis on which
 session types for mainstream programming languages can be studied, taking
-advantage of previous proof effort through the re-use of existing libraries
+advantage of previous proof effort through the reuse of existing libraries
 for programming language metatheory. The work has presented a number of
 interesting challenges for the formalisation of programming languages and as a
 result generated a number of useful guidelines and issues to consider.
