Described Coq version of ccoutput (added its forgotten figure).

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -519,3 +519,4 @@
 \newcommand{\permb}[2]{\left\{{#1}\leftrightsquigarrow{#2}\right\}}
 \newcommand{\open}[3]{\left\{{#1}\leadsto{#2}\right\}{#3}}
 \newcommand{\tpcp}{\tpvdash_{cp}}
+\newcommand{\GD}{\Delta} % shorthand to help with line lengths
