--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -237,9 +237,11 @@ was chosen so as to be in line with \citeauthor{Wadler:2014}'s
 definitions. However, explicit weakening is required to differentiate the
 principal cut elimination rules for the interactions between servers and
 clients; spawning and garbage collection (weakening). The paper presentation
-does not specify where weakening could occur; it is tacitly assumed weakening
-can always be pushed further up the derivation tree to a base rule
-e.g. \coqe$cp_fwd$ rule.
+does not specify where weakening could occur due to its implicit nature; it is
+tacitly assumed weakening can always be pushed further up the derivation tree
+to a base rule e.g. \coqe$cp_fwd$ rule. The same is true of contraction where
+it is defined as a substitution of names on process terms, not a
+syntax-directed rule.
 
 \begin{samepage}
 Contraction is not supported in the formalisation due to the difficulty in
@@ -270,12 +272,14 @@ Lemma in_env_fv:
     x $\in$ dom $\Gamma$ $\iff$ x $\in$ fv_proc P.
 \end{coq}
 
-\textbf{Empty Choice.} The empty choice rule may only have a single binding in
-the context (cf. an arbitrary context in \citeauthor{Wadler:2014}'s
-presentation~\cite{Wadler:2014}). Adding an arbitrary environment to the empty
-choice constructor would prohibit \coqe$in_env_fv$ since its process no longer
-contains all the names of its environment. Not only would weakening be
-inadmissible if \coqe$in_env_fv$ did not hold, but also axiom cut reduction:
+\textbf{Empty Choice.} The development provides a restricted form of the empty
+choice rule. In contrast to the arbitrary context in
+\citeauthor{Wadler:2014}'s presentation~\cite{Wadler:2014}, \coqe!cp_empcho!
+may only have a single binding in the context. Adding an arbitrary environment
+to the empty choice constructor would prohibit \coqe$in_env_fv$ since its
+process no longer contains all the names of its environment. Not only would
+weakening be inadmissible if \coqe$in_env_fv$ did not hold, but also axiom cut
+reduction:
 \begin{coq}
 Lemma reduce_axcut:
   forall P A (w : atom) $\Gamma$
@@ -307,6 +311,8 @@ of CP still admits a valid translation from GV. In a private communication,
 Philip Wadler echoed these remarks but pointed out that this is likely because
 the GV-to-CP translation does not require the full expressiveness of CP.
 
+\subsubsection{Equivalences and Conversions}
+
 The structural equivalences and commuting conversions have some additional
 complexity not present in the original presentation. For instance, structural
 equivalences are not unique and different process terms result depending on
@@ -332,41 +338,54 @@ on \coqe$open_proc P x$. Similarly, to prove the converse statement
 permutating binders is essential in formulating the majority of the rules.
 
 Regarding commuting conversions, many require analysing permutations
-containing singleton bindings. Consider the following commuting conversion:
+containing singleton bindings. Consider the following the Coq encoding of the
+commuting conversion for output (cf. Figure~\ref{fig:ccoutput}):
 \begin{coq}
-  Lemma reduce_cc_input:
-    forall P Q (x:atom) A B $\Gamma$
-           (WT: $\nu$ A.(x(B).P $\mid$ Q) $\tpcp$ $\Gamma$),
-      x(B).($\nu$ A.($\open{0}{1}{P}$ $\mid$ Q)) $\tpcp$ $\Gamma$.
+Lemma reduce_cc_multi_one:
+  forall P Q R (x:atom) A B $\Gamma$ (LCQ: lc_proc Q)
+         (WT: $\nu$ A.([B] x.(P $\mid$ Q) $\mid$ R) $\tpcp$ $\Gamma$),
+    [B] x.($\nu$ A.($\permb{0}{1}{P}$ $\mid$ R) $\mid$ Q) $\tpcp$ $\Gamma$.
 \end{coq}
 
-Afer inverting \key{WT} and specialising the resulting hypotheses, regarding
+Notice again, as in the case for \coqe!assoc_1!, it necessary to stipulate
+that \coqe!Q! is locally closed to ensure \coqe!P! receives the channel
+created by the outer cut as part of its environment.
+
+After inverting \key{WT} and specialising the resulting hypotheses, regarding
 the subprocesses, with fresh variables the proof state is as follows:
 
 \begin{tabular}{l}
 \begin{coq}
 1 subgoal
 (* ... other elements of the proof context ... *)
-CPQ : open_proc Q y $\tpcp$ y$\sim$A++$\Delta$Q
-CPP0 : $\open{0}{z}{\open{1}{y}{P}}$ $\tpcp$ z$\sim$B++x$\sim$C++$\Delta$P0
-PER : Permutation $\Gamma$ ($\Delta$P++$\Delta$Q)
-PER0 : Permutation ($\Delta$P++y$\sim$A)]) (x$\sim$B$\parr$C++$\Delta$P0)
+CPR : $\open{0}{y}{R}~\tpcp$ y$\sim$A++$\GD$Q
+CPQ : Q $\tpcp$ x$\sim$C++$\GD$Q0
+CPP : $\open{0}{z}{\open{1}{y}{P}}$ $\tpcp$ z$\sim$B++$\GD$P0
+NIN : y $\notin$ {x} $\cup$ dom $\GD$Q0
+PER : Permutation $\Gamma$ ($\GD$P++$\GD$Q)
+PER0 : Permutation ($\GD$P++y$\sim$A) (x$\sim$B$\otimes$C++$\GD$P0++$\GD$Q0)
 \end{coq}\\ \hline
 \begin{coq}
-x(B).($\nu$ A.($\open{0}{1}{P}$ $\mid$ Q)) $\tpcp$ $\Gamma$.
+x(B).($\nu$ A.($\open{0}{1}{P}$ $\mid$ Q)) $\tpcp$ $\Gamma$
 \end{coq}
 \end{tabular}
 \\~\\
 
 In order to prove the goal, $\Gamma$ must be replaced with the sublists typing
-\coqe!P! and \coqe!Q!. Therefore, \coqe!PER0! needs to modified such that the
-left-hand side is $\Delta$P and the right-hand side has \coqe!y$\sim$A!
-removed. In other words, the binding of \coqe!y! within \coqe!$\Delta$P0! must
-be extracted. Since many of the commuting conversion rules required this sort
-of reasoning separating the work out into a tactic comes to mind. Indeed, Ltac
-is well-suited for this type of work, searching the context and manipulating
-hypotheses of a particular form. The Ltac script in Figure~\ref{fig:extract}
-does the job\todo{keep (and explain) this?}.
+\coqe!P!, \coqe!Q! and \coqe!R!. Therefore, \coqe!PER0! needs to be modified
+such that the left-hand side is $\GD$P and the right-hand side has
+\coqe!y$\sim$A!  removed. In other words, the binding of \coqe!y! within
+\coqe!$\GD$P0! must be extracted (by \coqe!NIN!, \coqe!y! must be in
+\coqe!$\GD$P0!). Since many of the commuting conversion rules required this
+sort of reasoning, separating the work out into a tactic appears
+beneficial. Indeed, Ltac is well-suited for this type of work, searching the
+context and manipulating hypotheses of a particular form. The Ltac script in
+Figure~\ref{fig:extract} does the job and after executing
+\coqe!extract_bnd y A! \key{PER0} becomes:
+\begin{coq}
+Permutation ($\GD$P++y$\sim$A) (x$\sim$B$\otimes$C++E1++y$\sim$A++E2++$\GD$Q0)
+\end{coq}
+where E1 and E2 are sublists of $\GD$P0.
 
 \begin{figure}
 \begin{coq}
@@ -394,10 +413,8 @@ Ltac extract_bnd x A :=
 
 However, the task of removing the binding from the permutation is not
 automated to keep information loss within the context transparent to an
-individual proof. The tactic appears more general in this form and allows more
-than one ordering of tactic sequences. feels like two jobs to remove it as
-well as find it. although perhaps extract is not the right term if it doesn't
-remove it
+individual proof. The tactic is more modular and general in this form,
+permitting composition and permutation of tactic sequences.
 
 \subsubsection{Top-level Cut Elimination}\label{sec:cutelim}
 
