--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -337,6 +337,8 @@ on \coqe$open_proc P x$. Similarly, to prove the converse statement
 \coqe$forall x, open_proc R x$ must be assumed. For commuting conversions,
 permutating binders is essential in formulating the majority of the rules.
 
+\input{extract}
+
 Regarding commuting conversions, many require analysing permutations
 containing singleton bindings. Consider the following the Coq encoding of the
 commuting conversion for output (cf. Figure~\ref{fig:ccoutput}):
@@ -386,30 +388,6 @@ Figure~\ref{fig:extract} does the job and after executing
 Permutation ($\GD$P++y$\sim$A) (x$\sim$B$\otimes$C++E1++y$\sim$A++E2++$\GD$Q0)
 \end{coq}
 where E1 and E2 are sublists of $\GD$P0.
-
-\begin{figure}
-\begin{coq}
-Ltac extract_bnd x A :=
-  match goal with
-    | [H: Permutation (_++x~A) ?F |- _] =>
-      let BNDS := fresh "BNDS" in
-      forwards~ BNDS: Perm_binds x A H
-      ; analyze_binds_uniq BNDS
-      ; try (by applys~ uniq_perm H)
-      ; try (match goal with
-               | [H: binds x A ?E |- _] =>
-                 let E1 := fresh "E1" in
-                 let E2 := fresh "E2" in
-                 let EQ := fresh "EQ" in
-                 apply binds_env_split in H
-                 ; inversion_clear H as (E1 & E2 & EQ)
-                 ; substs~; des_reqs
-             end)
-  end.
-\end{coq}
-\caption{Tactic finds binding in permutation RHS}
-\label{fig:extract}
-\end{figure}
 
 However, the task of removing the binding from the permutation is not
 automated to keep information loss within the context transparent to an
